feat: add gRPC server implementation with streaming endpoints
The commit adds a gRPC server implementation alongside the existing HTTP server, enabling clients to use either protocol. The implementation includes streaming and unary endpoints for agent interactions, file operations, and code analysis.

Changes include:
- Add protobuf service definitions
- Implement concurrent HTTP and gRPC servers
- Add streaming endpoints for chat, edit and tool use
- Add conversions between gRPC and internal types
- Add tests and documentation for gRPC server

--- a/sidecar/Cargo.toml
+++ b/sidecar/Cargo.toml
@@ -86,6 +86,8 @@ diffy = "0.4.0"
 colored = "2.1.0"
 reqwest-middleware = "0.4.0"
 mcp_client_rs = "0.1.7"
+tonic = "0.10"
+prost = "0.12"
 
 [target.'cfg(unix)'.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
