--- a/sidecar/Cargo.toml
+++ b/sidecar/Cargo.toml
@@ -11,6 +11,7 @@ default = ["image_compression"]
 ee = []
 image_compression = ["libcaesium", "image"]
 tee_requests = []
+grpc = ["tonic", "prost"]
 
 [dependencies]
 libcaesium = { version = "0.17.1", default-features = false, features = ["jpg", "png"], optional = true }
