--- a/sidecar/Cargo.toml
+++ b/sidecar/Cargo.toml
@@ -89,13 +89,14 @@ reqwest-middleware = "0.4.0"
 mcp_client_rs = "0.1.7"
 tonic = { version = "0.10", optional = true }
 prost = { version = "0.12", optional = true }
+tonic-build = { version = "0.10", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
-fs_extra = "1.3.0"
 blake3 = "1.4.0"
 phf_codegen = "0.11.2"
-serde = {version = "1.0.188", features = ["derive"]}
+serde = { version = "1.0.188", features = ["derive"] }
 serde_yaml = "0.9.25"
+tonic-build = { version = "0.10", optional = false }
