feat: add comprehensive API modules for auth, caching, and monitoring
The commit adds several new API modules to the sidecar service including authentication, file system operations, LSP support, caching, metrics/monitoring, plugin management and security features.

--- a/sidecar/Cargo.toml
+++ b/sidecar/Cargo.toml
@@ -40,6 +40,7 @@ erased-serde = "0.3.31"
 tower = "0.4.13"
 tower-http = { version = "0.4.1", features = ["auth", "cors", "catch-panic", "fs"] }
 thiserror = "1.0.49"
+time = { version = "0.3", features = ["serde"] }
 gix = "0.54.1"
 rand = "0.8.5"
 flume = "0.11.0"
@@ -78,6 +79,11 @@ serde-xml-rs = "0.6.0"
 async-recursion = "1.1.1"
 tree_magic_mini = "3.0.2"
 quick-xml = { version = "0.31.0", features = [ "serialize" ] }
+jsonwebtoken = "9.2.0"
+notify = "6.1.1"
+prometheus = "0.13.3"
+opentelemetry = { version = "0.21.0", features = ["rt-tokio"] }
+opentelemetry-jaeger = "0.20.0"
 derivative = "2.2.0"
 similar = "2.6.0"
 globset = "0.4.15"
