--- a/sidecar/Cargo.toml
+++ b/sidecar/Cargo.toml
@@ -26,8 +26,11 @@ anyhow = "1.0.75"
 serde_json = "1.0.107"
 serde = { version = "1.0.188", features = ["derive"] }
 once_cell = "1.18.0"
-regex = ">= 1.9, < 1.9.5"
+regex = "1.10.2"
 memchr = "2.5.0"
+walkdir = "2.4.0"
+tower-lsp = "0.20.0"
+libloading = "0.8.1"
 axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
